# TrendRadar-visual

./: .gitignore  README-EN.md  README-MCP-FAQ.md  README.md  index.html  pyproject.toml  requirements.txt
.github/workflows/: ghcr.yml
config/: config.yaml  frequency_words.txt
docker/: .env  Dockerfile  docker-compose-build.yml  docker-compose.yml  entrypoint.sh  manage.py
docs/: CLAWCLOUD-RUN.md  NEW-PROJECT.md
trendradar/: context.py
trendradar/core/: __init__.py  analyzer.py  frequency.py  loader.py
trendradar/notification/: renderer.py  senders.py  splitter.py
trendradar/report/: generator.py  html.py  rss_html.py
trendradar/web/: __init__.py  config_store.py  server.py
trendradar/web/templates/: base.html  browse.html  home.html  manage.html  reports.html
